Added stuff for debugging bokeh with VSCode Added basic summary table

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Bokeh server",
             "type": "python",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal",
-            // KaroleKavaliauskaite_eb_pigtt_w\\message_1.json
-            // RutaPetkeviciute_STzoKh4NsA\\message_comb.json
-            // VytautasGarliauskas_yc2NJgzemA\\message_combined.json
-            // Dainius old?: FacebookUser_hAdJBO2xXg
-            "args": ["C:\\Users\\audri\\Downloads\\facebook-audriusliuberskis\\messages\\inbox\\RutaPetkeviciute_STzoKh4NsA"]
+            "request": "attach",
+            "port": 5678,
+            "host": "localhost",
+            "preLaunchTask": "launch Bokeh server"
         }
     ]
 }
